# fpgen

./: .gitignore  FP_Tool.ipynb  README.md  Wigner-FP.nb  pyproject.toml
fpgen/: __init__.py  algebra.py  api.py  builders.py  conversion.py  errors.py  formatting.py  parsing.py  substitutions.py
